--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "HeFei"
 title                    : "Shuo Xu/"
 title_separator          : "-"
 name                     : &name "Your Name"
-description              : &description "personal description"
+description              : &I have nothing to introduce at the moment."
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
