--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "HeFei"
-title                    : "Shuo Xu/"
+title                    : "Shuo Xu/Personal Homepage"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &I have nothing to introduce at the moment."
